Working publisher/subscriber events for Cohorts and discussions

--- a/lms/templates/instructor/instructor_dashboard_2/discussions_management.html
+++ b/lms/templates/instructor/instructor_dashboard_2/discussions_management.html
@@ -12,6 +12,7 @@ from openedx.core.djangoapps.course_groups.partition_scheme import get_cohorted_
 <div class="discussions-management"
      data-discussion-topics-url="${section_data['discussion_topics_url']}"
      data-course-discussion-settings-url="${section_data['course_discussion_settings']}"
+     data-enrollment-track-count="${section_data['enrollment_track_count']}"
 >
 </div>
 
